# libpkgreconcile

./: .clang-format  .editorconfig  .gitignore  CONTRIBUTING.md  DESIGN.md  Doxyfile  HISTORY.md  MAINTAINING.md  MIGRATION.md  README.md  TESTING.md  meson.build  meson.options
.github/workflows/: build.yml
include/libpkgreconcile/: candidate.h  error.h  filesystem_reconciler.h  libpkgreconcile.h  types.h  visibility.h
man/: libpkgreconcile.3.scdoc  meson.build  rejmerge.8.scdoc
src/: candidate.cpp  candidate_access.h  filesystem_reconciler.cpp  types.cpp
tests/: header_candidate.cpp  header_error.cpp  header_filesystem_reconciler.cpp  header_types.cpp  header_visibility.cpp  meson.build  test_actions.cpp  test_cli.py  test_color.cpp  test_compare.cpp  test_header.cpp  test_scan.cpp  test_stale.cpp  test_support.hpp  test_symbols.py  test_terminal.cpp
tools/: color.cpp  color.h  main.cpp  meson.build  terminal.cpp  terminal.h
