# SPDX-FileCopyrightText: 2026 Alexandr Savca
# SPDX-License-Identifier: GPL-3.0-or-later

option('link_mode', type: 'combo', choices: ['shared', 'static'],
       value: 'shared',
       description: 'How libpkgreconcile links external dependencies')
option('tests', type: 'feature', value: 'enabled',
       description: 'Build and run tests')
option('tools', type: 'feature', value: 'enabled',
       description: 'Build reference command-line tools')
option('install_tools', type: 'boolean', value: false,
       description: 'Install reference command-line tools')
option('man_pages', type: 'feature', value: 'auto',
       description: 'Build manual pages with scdoc')
